--- a/webshare-downloader-frontend/package.json
+++ b/webshare-downloader-frontend/package.json
@@ -15,13 +15,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-script start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
