--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-OUTPUT_PATH ="/media/pi"
+FILE_OUTPUT_PATH ="/media/pi"
+FILE_OUTPUT_PATH_TEST="./download_tests"
+QUEUE_FILE_PATH="/tmp/links.txt"
+QUEUE_FILE_PATH_TEST="./download_tests/links.txt"
 LIMIT_SPEED_RATE=100k
-TEST_ENV=1
+DEV_ENV="dev"
+PYTHON_CMD="python3"
