Core functionality completed

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ FILE_OUTPUT_PATH_TEST="./download_tests"
 QUEUE_FILE_PATH="/tmp/links.txt"
 QUEUE_FILE_PATH_TEST="./download_tests/links.txt"
 LIMIT_SPEED_RATE=100k
-DEV_ENV="dev"
+NODE_ENV="development"
 PYTHON_CMD="python3"
