--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "main": "src/server.js",
    "scripts": {
       "start": "cd webshare-downloader-frontend && npm run build && cd .. && ts-node src/index.ts",
+      "fbuild": "cd webshare-downloader-frontend && npm run build",
       "qstart": "ts-node src/index.ts",
       "test": "echo \"Error: no test specified\" && exit 1",
       "dev": "nodemon src/index.ts",
